release/openware-image/compose/gateway.yml
static_resources:
  listeners:
    - address:
        socket_address:
          port_value: 80
          address: 0.0.0.0
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: "PUT, GET, POST, DELETE"
                        allow_headers: "content-type, x-grpc-web"
                        filter_enabled:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                          runtime_key: cors.www.enabled
                      routes:
                        - match:
                            prefix: "/api/v2/barong"
                          route:
                            cluster: barong
                            prefix_rewrite: "/api/v2/"
                        - match:
                            prefix: "/api/v2/finex"
                          route:
                            cluster: finex
                            prefix_rewrite: "/api/v2"
                        - match:
                            prefix: "/api/v2/open_finance"
                          route:
                            cluster: finex
                            prefix_rewrite: "/api/v2/ws"
                            upgrade_configs:
                              upgrade_type: "websocket"

                        # - match:
                        #     prefix: "/ws"
                        #   route:
                        #     cluster: finex
                        #     prefix_rewrite: "/ws/"
                        #     upgrade_configs:
                        #       upgrade_type: "websocket"
                http_filters:
                  - name: envoy.cors
                    typed_config: {}
                  - name: envoy.ext_authz
                    config:
                      with_request_body:
                        max_request_bytes: 90000000
                        allow_partial_message: true
                      http_service:
                        authorization_request:
                          allowed_headers:
                            patterns:
                              - exact: cookie
                              - exact: x-auth-apikey
                              - exact: x-auth-nonce
                              - exact: x-auth-signature
                              - exact: x-csrf-token
                              - exact: user-agent
                              - exact: x-forwarded-host
                              - exact: x-forwarded-for
                              - exact: from
                              - exact: x-forwarded-proto
                              - exact: proxy-authorization
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: authorization
                          allowed_client_headers:
                            patterns:
                              - exact: set-cookie
                              - exact: proxy-authenticate
                              - exact: www-authenticate
                              - exact: location
                        path_prefix: "/api/v2/auth"
                        server_uri:
                          cluster: barong
                          timeout: 1.000s
                          uri: http://barong:3000
                  - name: envoy.router
                    config: {}
      perConnectionBufferLimitBytes: 10000000
  clusters:
    - name: barong
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: barong
            port_value: 3000
    - name: finex
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: api
            port_value: 8080
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9099
